<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <ImageView
        android:id="@+id/notInternet"
        android:src="@drawable/no_internet_image"
        style="@style/trackErrorImage"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="16dp"
        android:id="@+id/errorText"
        android:layout_width="313dp"
        android:layout_height="93dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notInternet">

        <TextView
            android:id="@+id/notInternetFound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/netTrouble"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/justSpace"
            style="@style/trackErrorText"/>
        <TextView
            android:id="@+id/justSpace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/notInternetFound"
            app:layout_constraintBottom_toTopOf="@id/downloadProblem"
            style="@style/trackErrorText"/>
        <TextView
            android:id="@+id/downloadProblem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="true"
            android:text="@string/cantDown"
            app:layout_constraintTop_toBottomOf="@id/justSpace"
            style="@style/trackErrorText"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        app:layout_constraintTop_toBottomOf="@id/errorText"
        android:id="@+id/reloadButton"
        android:layout_width="91dp"
        android:layout_height="36dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/reload_button">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reload"
            android:textColor="@color/reloadTextButton"
            android:textSize="14sp"
            android:fontFamily="@font/ys_display_medium"
            android:layout_centerInParent="true" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
