<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background"
    android:fitsSystemWindows="true"
    tools:context=".library.ui.NewPlaylistFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarTop"
        style="@style/tnSwitch"
        android:layout_width="match_parent"
        android:layout_height="@dimen/downToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:navigationIconTint="?attr/colorOnSurface"
        app:title="@string/newPlaylist"
        app:titleTextAppearance="@style/ToolbarTitleAppearance" />

    <ImageView
        android:id="@+id/playlistCoverImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_new_playlist"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarTop" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlistNameInputLayout"
        style="@style/CreatePlaylistTextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/playlist_name_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playlistCoverImage">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlistNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_regular"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/ColorChange"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlistDescriptionInputLayout"
        style="@style/CreatePlaylistTextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/playlist_description_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playlistNameInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlistDescriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_regular"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLines="3"
            android:textColor="@color/ColorChange"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createButton"
        style="@style/CreatePlaylistButtonStyle"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:enabled="false"
        android:text="@string/create_playlist_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
