<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background"
    android:fitsSystemWindows="true"
    tools:context=".player.ui.PlayerFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/playerContentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbarTop"
            style="@style/tnSwitch"
            android:layout_width="0dp"
            android:layout_height="@dimen/downToolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_back"
            app:navigationIconTint="?attr/colorOnSurface"
            app:titleTextAppearance="@style/ToolbarTitleAppearance" />

        <ImageView
            android:id="@+id/playerImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@id/trackName"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbarTop" />

        <TextView
            android:id="@+id/trackName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="224dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/library"
            android:textColor="@color/ColorChange"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/playerImage" />

        <TextView
            android:id="@+id/artistName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/app_name"
            android:textColor="@color/ColorChange"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/trackName" />

        <ImageButton
            android:id="@+id/playButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:enabled="false"
            android:scaleType="fitCenter"
            android:src="@drawable/play_button"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/artistName" />

        <ImageButton
            android:id="@+id/addToPlaylist"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="55dp"
            android:background="@drawable/add_to_playlist_button"
            android:scaleType="fitCenter"
            android:src="@drawable/add_to_playlist_button"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toStartOf="@id/playButton"
            app:layout_constraintHorizontal_bias="0.442"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/artistName" />

        <ImageButton
            android:id="@+id/likeTrack"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="56dp"
            android:background="@drawable/like_button"
            android:scaleType="fitCenter"
            android:src="@drawable/like_button"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.442"
            app:layout_constraintStart_toEndOf="@id/playButton"
            app:layout_constraintTop_toBottomOf="@id/artistName" />

        <TextView
            android:id="@+id/playedTime"
            android:layout_width="100dp"
            android:layout_height="16dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="00:00"
            android:textAlignment="center"
            android:textColor="@color/ColorChange"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/playButton" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/playedTime">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/trackAddInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false" />
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/dimOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/standard_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="505dp"
        android:background="@drawable/bottom_sheet_background"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="505dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:background="@drawable/bottom_sheet_handle" />

        <TextView
            android:id="@+id/tv_bottom_sheet_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/add_to_playlist_title"
            android:textColor="@color/ColorChange"
            android:textSize="19sp" />

        <Button
            android:id="@+id/new_playlist_bottom_sheet_button"
            style="@style/playlistButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="28dp"
            android:text="@string/new_playlist_button" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/bottom_sheet_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
